chore: seal edge state
Signed-off-by: Sam Gammon <sam@elide.ventures>